@@ -4,9 +4,12 @@ import de.fll.screen.model.Competition;
 import de.fll.screen.repository.CompetitionRepository;
 import de.fll.screen.service.parser.FLLRobotGameParser;
 import de.fll.screen.web.dto.CompetitionDTO;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.server.ResponseStatusException;
 
 @RestController
 public class ParserRessource {
@@ -26,16 +29,19 @@ public class ParserRessource {
 	}
 
 	@GetMapping("/api/parse")
-	public CompetitionDTO parse() {
-		int id = 0;
-		/* if (competitionRepository.existsByInternalId(id)) { return competitionRepository.findByInternalId(id); } */
-		var competitions = parser.getAvailableCompetitionIds();
-		if (competitions.size() == 1) {
-			id = Integer.parseInt(competitions.get(0));
-		} else {
-			// TODO
-			return null;
+	public CompetitionDTO parse(@RequestParam(value = "id", required = false) Integer id) {
+		if (id == null) {
+			var competitions = parser.getOwnCompetitionIds();
+			if (!competitions.isEmpty()) {
+				id = Integer.parseInt(competitions.getFirst());
+			} else {
+				// No personal competition available
+				throw new ResponseStatusException(HttpStatus.NOT_FOUND, "No competition available");
+			}
 		}
+		// TODO don't always reparse, only when triggered by user
+		/* if (competitionRepository.existsByInternalId(id)) { return competitionRepository.findByInternalId(id); } */
+
 		Competition competition = parser.parse(null, id);
 		return CompetitionDTO.of(competition);
 	}
